# sacamantecas

./: .gitignore  CHANGELOG.md  README.md  build.cmd  build.py  conftest.py  dump_url.py  make.py  mkvenv.py  pyproject.toml  requirements.txt  sacamantecas.ini  sacamantecas.py  sacamantecas.pyw  test.py  test_load_profiles.py  test_main.py  test_main_decorators.py  test_parse_sources.py  test_profiles.py  test_setup_logging.py  utils.py  venv.cmd  version.py
src/: dump_url.py
src/sacamantecas/: __init__.py  sacamantecas.ini  sacamantecas.py  version.py
tests/: conftest.py  file______html_http___ceres_mcu_es_pages_Main_idt_134248_inventary_DE2016_1_24_table_FMUS_museum_MOM_html_ref.txt  helpers.py  http___ceres_mcu_es_pages_Main_idt_134248_inventary_DE2016_1_24_table_FMUS_museum_MOM_ref.txt  local.txt  local.xlsx  local_ref.txt  local_ref.xlsx  network.txt  network.xlsx  network_ref.txt  network_ref.xlsx  test_app_metadata.py  test_arguments.py  test_decorators.py  test_handlers.py  test_load_profiles.py  test_logging.py  test_main.py  test_main_decorators.py  test_parse_arguments.py  test_parse_sources.py  test_parsers.py  test_profiles.py  test_setup_logging.py  test_skimming.py  test_sources.py  test_strings.py  test_unused.py  test_uri_to_filename.py  test_url.py  test_url_handling.py  test_url_to_filename.py  test_version.py  test_wait_for_keypress.py  utf-8.html
tests/html/: http___catalogo_bne_es_uhtbin_cgisirsi_x_0_0_57_5_3_searchdata1_1935433_CKEY__searchfield1_GENERAL_SUBJECT_GENERAL___user_id_WEBSERVER.html  (+25 more)
