[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==80.9.0",
    "versioningit==3.3.0"
]

[project]
name = "sacamantecas"
dynamic = ["version"]
description = "Saca las mantecas…"
readme = "README.md"
requires-python = ">= 3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
maintainers = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
dependencies = [
    "openpyxl==3.1.3",
    "pyinstaller==6.16.0",
    "pytest==8.4.2",
]

[project.urls]
source = "https://github.com/DervishD/sacamantecas"
issues = "https://github.com/DervishD/sacamantecas/issues"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
dirty = "{base_version}+{rev}.dirty"
distance = "{next_version}.dev{distance}+{rev}"
distance-dirty = "{next_version}.dev{distance}+{rev}.dirty"